--- a/ediart/.github/workflows/xs.yml
+++ b/ediart/.github/workflows/xs.yml
@@ -21,7 +21,7 @@ jobs:
           cd temp_download
           
           echo "开始下载文件..."
-          curl -L -o "single_line.zip" "https://gitee.com/PizazzXS/another-d/raw/master/单线路.zip"
+          curl -L -o "single_line.zip" "https://raw.githubusercontent.com/PizazzGY/NewTVBox/refs/heads/main/单线路.zip"
           
           if [ -f "single_line.zip" ]; then
             echo "文件下载成功，开始解压..."
