Sync external repos (7): AA999OK, sky4726, ediart, lemonguo121, leexuben, YJL, zheng1976
Synced at 2025-11-23 02:09:57 UTC

--- a/ediart/aowu/config.json
+++ b/ediart/aowu/config.json
@@ -1,5 +1,5 @@
 {
-	"spider": "https://9763.kstore.space/wnqiwnquidwiunddneudne/custom_spider.jar",
+	"spider": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/custom_spider.jar",
 	"logo": "https://gitee.com/amg99/tvjson/raw/master/img/dysmt.gif",
 	"sites": [{
 			"name": "💬嗷嗚彈幕",
@@ -12,6 +12,18 @@
 			"quickSearch": 0,
 			"changeable": 0
 		},
+        {
+            "name": "🎉Bili",
+            "key": "🎉Bili",
+            "type": 3,
+            "api": "csp_Bili",
+            "searchable": 1,
+            "filterable": 1,
+            "quickSearch": 1,
+            "changeable": 1,
+			"jar": "./bili.jar",
+            "ext": "./bili.json"
+        },
 		{
 			"name": "🎬瓜子",
 			"key": "🎬瓜子",
@@ -21,7 +33,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://9763.kstore.space/wnqiwnquidwiunddneudne/json/guazi.json"
+			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/guazi.json"
 		},
 		{
 			"name": "🎭杜北",
@@ -32,7 +44,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://9763.kstore.space/wnqiwnquidwiunddneudne/json/dubk.json"
+			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/dubk.json"
 		},
 		{
 			"name": "🎪伊外",
@@ -53,7 +65,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://9763.kstore.space/wnqiwnquidwiunddneudne/json/jpian.json"
+			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/jpian.json"
 		},
 		{
 			"name": "🥇金牌",
