Sync external repos (7): AA999OK, sky4726, ediart, lemonguo121, leexuben, YJL, zheng1976
Synced at 2025-11-25 01:57:40 UTC

--- a/ediart/aowu/config.json
+++ b/ediart/aowu/config.json
@@ -12,6 +12,17 @@
 			"quickSearch": 0,
 			"changeable": 0
 		},
+		{
+            "name": "🐙GitHub",
+            "key": "🐙GitHub",
+            "type": 3,
+            "api": "csp_GitHubAmns",
+            "searchable": 0,
+            "filterable": 0,
+            "quickSearch": 0,
+            "changeable": 0,
+            "ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/github.json"
+        },
         {
             "name": "🎉Bili",
             "key": "🎉Bili",
