--- a/ediart/aowu/config.json
+++ b/ediart/aowu/config.json
@@ -1,5 +1,5 @@
 {
-	"spider": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/custom_spider.jar",
+	"spider": "https://aw.0890.dpdns.org/wnqiwnquidwiunddneudne/custom_spider.jar",
 	"logo": "https://gitee.com/amg99/tvjson/raw/master/img/dysmt.gif",
 	"sites": [{
 			"name": "💬嗷嗚彈幕",
@@ -21,7 +21,7 @@
 			"filterable": 0,
 			"quickSearch": 0,
 			"changeable": 0,
-			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/github.json"
+			"ext": "https://aw.0890.dpdns.org/wnqiwnquidwiunddneudne/json/github.json"
 		},
 		{
 			"name": "🎉Bili",
@@ -46,7 +46,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/guazi.json"
+			"ext": "https://aw.0890.dpdns.org/wnqiwnquidwiunddneudne/json/guazi.json"
 		},
 		{
 			"name": "🎭杜北",
@@ -57,7 +57,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/dubk.json"
+			"ext": "https://aw.0890.dpdns.org/wnqiwnquidwiunddneudne/json/dubk.json"
 		},
 		{
 			"name": "🌱春天",
@@ -89,7 +89,7 @@
 			"filterable": 1,
 			"quickSearch": 1,
 			"changeable": 1,
-			"ext": "https://0890.dpdns.org/wnqiwnquidwiunddneudne/json/jpian.json"
+			"ext": "https://aw.0890.dpdns.org/wnqiwnquidwiunddneudne/json/jpian.json"
 		},
 		{
 			"name": "🔥热播",
