--- a/ediart/aowu/config.json
+++ b/ediart/aowu/config.json
@@ -140,6 +140,17 @@
 			"searchable": 1,
 			"filterable": 1,
 			"quickSearch": 1,
+			"changeable": 1,
+			"ext": "1"
+		},
+		{
+			"name": "🏆高端",
+			"key": "高端",
+			"type": 3,
+			"api": "csp_DdysAmns",
+			"searchable": 1,
+			"filterable": 1,
+			"quickSearch": 1,
 			"changeable": 1
 		},
 		{
@@ -163,10 +174,10 @@
 			"changeable": 1
 		},
 		{
-			"name": "🏆高端",
-			"key": "高端",
+			"name": "📽️LIBVIO",
+			"key": "LIBVIO",
 			"type": 3,
-			"api": "csp_DdysAmns",
+			"api": "csp_LibvioAmns",
 			"searchable": 1,
 			"filterable": 1,
 			"quickSearch": 1,
@@ -258,6 +269,16 @@
 			"key": "星星短剧",
 			"type": 3,
 			"api": "csp_XydjAmns",
+			"searchable": 1,
+			"filterable": 1,
+			"quickSearch": 1,
+			"changeable": 1
+		},
+		{
+			"name": "🎂岁岁短剧",
+			"key": "岁岁短剧",
+			"type": 3,
+			"api": "csp_SpdjAmns",
 			"searchable": 1,
 			"filterable": 1,
 			"quickSearch": 1,
